name:                utf8-parser
version:             0.1.0.0
author:              Ian Henry
maintainer:          ianthehenry@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable utf8-parser
  main-is:             Main.hs
  default-extensions:  NoImplicitPrelude
  build-depends:       base >=4.7 && <4.8
                     , attoparsec
                     , base-prelude
                     , bytestring
  default-language:    Haskell2010
